// framework.proto
syntax = "proto3";

package framework;
option go_package = "lang_adapters";

service FrameworkService {
    rpc DomainCommunication(stream DomainMessage) returns (stream RuntimeMessage);
    rpc SendMessage(DomainMessage) returns (RuntimeMessage);
}

message DomainMessage {
    string domain = 1;
    string type = 2;
    string payload = 3;
    string request_id = 4;
}

message RuntimeMessage {
    string type = 1;
    string payload = 2;
    string request_id = 3;
    bool success = 4;
    string error = 5;
}
